styles.css
/* http://meyerweb.com/eric/tools/css/reset/ 
   v2.0 | 20110126
   License: none (public domain)
*/

html, body, div, span, applet, object, iframe,
h1, h2, h3, h4, h5, h6, p, blockquote, pre,
a, abbr, acronym, address, big, cite, code,
del, dfn, em, img, ins, kbd, q, s, samp,
small, strike, strong, sub, sup, tt, var,
b, u, i, center,
dl, dt, dd, ol, ul, li,
fieldset, form, label, legend,
table, caption, tbody, tfoot, thead, tr, th, td,
article, aside, canvas, details, embed, 
figure, figcaption, footer, header, hgroup, 
menu, nav, output, ruby, section, summary,
time, mark, audio, video {
	margin: 0;
	padding: 0;
	border: 0;
	font-size: 100%;
	font: inherit;
	vertical-align: baseline;
}
/* HTML5 display-role reset for older browsers */
article, aside, details, figcaption, figure, 
footer, header, hgroup, menu, nav, section {
	display: block;
}
body {
	line-height: 1;
}
ol, ul {
	list-style: none;
}
blockquote, q {
	quotes: none;
}
blockquote:before, blockquote:after,
q:before, q:after {
	content: '';
	content: none;
}
table {
	border-collapse: collapse;
	border-spacing: 0;
}

:root {
}

.horizontal-layout {
	display: flex;
	flex-direction: row;
	width: 100%;
}

.horizontal-layout > div {
	width: 100%;
	border: 5px solid black;
    margin: 2px;
    height: 200px;
}


/************************************ Home Page *********************************************/

/* Video */
#home video {
  position: fixed;
  right: 0;
  bottom: 0;
  min-width: 100%;
  min-height: 100%;
}

#home .title {
  position: fixed;
  bottom: 0;
  background: rgba(0, 0, 0, 0.5);
  color: #f1f1f1;
  width: 100%;
  padding: 20px;
}

/*********************************** Frontroom Page ******************************************/

.frontroom.container {
	display: flex;
	flex-direction: column;
	align-items: center;
	position: relative;
	top: 250px;
	margin: 0 10px;
}

h1.frontroom {
	margin: 10px 0;
	font-size: 20px;
}



#character-selection > div:hover {
	background-color: red;

}


#character-selection > div > span {
	visibility: hidden;
	font-size: 20px;

}

#character-selection > div:hover > span{
	visibility: visible;
	color: white;
}

/*********************************** Selected Character View ******************************************/

#selection-view {
	visibility: hidden;
}

